adding test script and linter

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "start": "node --import tsx src/bin/cli.ts",
     "build": "node --import tsx src/bin/build.ts",
+    "test": "npx eslint src --quiet && node --import tsx src/bin/test.ts",
     "prepublishOnly": "npm run build"
   },
   "author": "Falkor Clark <falkorclark@gmail.com>",
