#1: updated the documentation and added some more examples

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
-    "renameitoptions",
-    "renameit"
+    "renameit",
+    "renameitcommand",
+    "renameitoptions"
   ]
 }
